<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="spending">This month spending: </string>
    <string name="app_name">MoneyWatcher</string>
    <string name="cfType">Type</string>
    <string name="spend">Spending</string>
    <string name="income">Income</string>
    <string name="pick">Pick</string>
    <string name="category">Select Category</string>
    
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="note">Note</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="transactions">Transactions</string>
    <string name="tag">Tag</string>
    
	<string name="recursat">Repeat</string>
	
	<string name="selectCategories">Select categories</string>
	
	<string name="uncategorized">Uncategorized</string>
	
	<string name="today">Today</string>
	<string name="yesterday">Yesterday</string>
	<string name="lastweek">Last Week</string>
	<string name="older">Older</string>    
	
	<!-- Statistics -->
	<string name="all">All</string>
	<string name="selectTime">Select time range</string>
	<string name="statics">Statistics</string>
	
	<!-- Context Menu Edit/Delete -->
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	
	<!-- Day of week -->
	<string name="sunday">Sunday</string>
	<string name="monday">Monday</string>
	<string name="tuesday">Tuesday</string>
	<string name="wednesday">Wednesday</string>
	<string name="thursday">Thursday</string>
	<string name="friday">Friday</string>
	<string name="saturday">Saturday</string>
</resources>