<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:orientation="vertical" >

    <!--
    	Dummy layout for making edit 
    	text not to be focused in launching 
    -->

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <LinearLayout
        android:id="@+id/llDummyTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llPanel"
        android:layout_below="@id/llDummyTop"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/wrapperLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cfType" >
                </TextView>
            </LinearLayout>

            <RadioGroup
                android:id="@+id/rgType"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rbSpend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:checked="true"
                    android:text="@string/spend" />

                <RadioButton
                    android:id="@+id/rbIncome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/income" />
            </RadioGroup>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lblCategories"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:textAppearance="?android:attr/textAppearanceMedium" >
                </TextView>

                <Button
                    android:id="@+id/btnPickCategories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pick" >
                </Button>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/amount" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/txtAmount"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recursat" >
                </TextView>
            </LinearLayout>

            <!-- <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
				<TextView
				    android:layout_width="wrap_content"
				    android:layout_height="fill_parent"
				    android:gravity="center"
				    android:textAppearance="?android:attr/textAppearanceMedium"
				    android:text="Monday, Tuesday"></TextView>
                
                <CheckBox
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></CheckBox>
            </RelativeLayout> -->
            
            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                
                <ListPreference
                    android:title="Weight"
 					android:summary="How much the planet pulls on you, in pounds."
 					android:key="weightPref"
 					android:defaultValue="180"/>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tag" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lblTags"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:textAppearance="?android:attr/textAppearanceMedium" >
                </TextView>

                <Button
                    android:id="@+id/btnPickTags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pick" >
                </Button>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/note" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/txtNote"
                    android:layout_width="fill_parent"
                    android:layout_height="130dp"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical"
                    android:singleLine="false" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="3dip"
                android:background="?android:attr/listDivider" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/llPanel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/cancel" />
    </LinearLayout>

</RelativeLayout>